--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "This project is meant to be a kind of template to start working with Cucumber and Cypress just cloning the project.",
   "main": "index.js",
   "scripts": {
-    "cypress:runner": "cypress open",
+    "cypress:runner": "cypress open --env allure=true && allure generate allure-results --clean -o allure-report && rm -r allure-results/ allure-report cypress/screenshots|| true || allure open",
     "cypress:execution": "cypress run --env",
-    "cypress:execution-tags": "cypress run --env tags=@mobile or @desktop"
+    "cypress:execution-tags": "cypress run --env tags=@mobile or @desktop",
+    "cypress:generate-report": "cypress run --env allure=true && allure generate allure-results --clean -o allure-report && rm -r allure-results/ allure-report cypress/screenshots|| true || allure open"
   },
   "keywords": [
     "cypress"
@@ -16,6 +17,8 @@
   "devDependencies": {
     "@badeball/cypress-cucumber-preprocessor": "^13.0.2",
     "@bahmutov/cypress-esbuild-preprocessor": "^2.1.5",
+    "@shelex/cypress-allure-plugin": "^2.40.0",
+    "allure-commandline": "^2.24.0",
     "cypress": "^10.10.0",
     "esbuild": "^0.15.11",
     "multiple-cucumber-html-reporter": "^3.0.1"
