--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "description": "This project is meant to be a kind of template to start working with Cucumber and Cypress just cloning the project.",
   "main": "index.js",
   "scripts": {
-    "cypress:runner": "cypress open --env allure=true && allure generate allure-results --clean -o allure-report && rm -r allure-results/ allure-report cypress/screenshots|| true || allure open",
-    "cypress:execution": "cypress run --env",
+    "cypress:runner": "cypress open",
+    "cypress:execution": "cypress run --env allure=true",
     "cypress:execution-tags": "cypress run --env tags=@mobile or @desktop",
-    "cypress:generate-report": "cypress run --env allure=true && allure generate allure-results --clean -o allure-report && rm -r allure-results/ allure-report cypress/screenshots|| true || allure open"
+    "clean:folders": "rm -R -f allure-report/* && rm -R -f allure-results/*",
+    "beforetest": "npm run clean:folders",
+    "allure:report": "allure generate allure-results --clean && allure open allure-report",
+    "tests": "npm run beforetest && npm run cypress:execution || npm run aftertest",
+    "aftertest": "npm run allure:report"
   },
   "keywords": [
     "cypress"
@@ -21,6 +25,7 @@
     "allure-commandline": "^2.24.0",
     "cypress": "^10.10.0",
     "esbuild": "^0.15.11",
+    "mocha-allure-reporter": "^1.4.0",
     "multiple-cucumber-html-reporter": "^3.0.1"
   },
   "dependencies": {
