--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "cypress:runner": "cypress open",
+    "cypress:headless":"cypress run",
     "cypress:execution": "cypress run --env allure=true",
     "cypress:execution-tags": "cypress run --env tags=@mobile or @desktop",
     "clean:folders": "rm -R -f allure-report/* && rm -R -f allure-results/*",
@@ -25,6 +26,8 @@
     "allure-commandline": "^2.24.0",
     "cypress": "^10.10.0",
     "esbuild": "^0.15.11",
+    "eslint": "^8.49.0",
+    "eslint-config-google": "^0.14.0",
     "mocha-allure-reporter": "^1.4.0",
     "multiple-cucumber-html-reporter": "^3.0.1"
   },
