--- a/.prettierrc
+++ b/.prettierrc
@@ -1,14 +1,8 @@
 {
-    "printWidth": 80,
-    "tabWidth": 2,
-    "useTabs": false,
     "semi": true,
+    "trailingComma": "es5",
+    "printWidth": 120,
     "singleQuote": true,
-    "quoteProps": "as-needed",
-    "jsxSingleQuote": false,
-    "trailingComma": "all",
-    "bracketSpacing": true,
-    "jsxBracketSameLine": true,
-    "arrowParens": "avoid",
-    "endOfLine": "auto"
+    "arrowParens": "always",
+    "proseWrap": "preserve"
   }
