--- a/cypress/package.json
+++ b/cypress/package.json
@@ -8,10 +8,11 @@
     "cypress:headless": "cypress run",
     "cypress:execution": "cypress run --env allure=true",
     "cypress:execution-tags": "cypress run --env tags=@mobile or @desktop",
-    "clean:folders": "rm -R -f allure-report/* && rm -R -f allure-results/*",
-    "beforetest": "npm run clean:folders",
+    "clean:allure-results": "cd cypress.io && rmdir -r -path allure-results",
+    "clean:allure-report":"cd cypress.io && rmdir -r -path allure-report",
+    "beforetest": "clean:allure-results || clean:allure-report",
     "allure:report": "allure generate allure-results --clean && allure open allure-report",
-    "tests": "npm run beforetest && npm run cypress:execution || npm run aftertest",
+    "tests": "npm run clean:allure-results || npm run clean:allure-report",
     "aftertest": "npm run allure:report"
   },
   "keywords": [
@@ -24,7 +25,7 @@
     "@bahmutov/cypress-esbuild-preprocessor": "^2.1.5",
     "@shelex/cypress-allure-plugin": "^2.40.0",
     "allure-commandline": "^2.24.0",
-    "cypress": "^10.11.0",
+    "cypress": "^10.10.0",
     "esbuild": "^0.15.11",
     "eslint": "^8.49.0",
     "eslint-config-google": "^0.14.0",
@@ -37,15 +38,8 @@
     "cypress-xpath": "^2.0.1",
     "winston": "^3.8.2"
   },
-  "env": {
+
+  "env": { 
     "allureResultsPath": "allure-results"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Jatinar12/cypress_new.git"
-  },
-  "bugs": {
-    "url": "https://github.com/Jatinar12/cypress_new/issues"
-  },
-  "homepage": "https://github.com/Jatinar12/cypress_new#readme"
+  }
 }
