--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "@bahmutov/cypress-esbuild-preprocessor": "^2.1.5",
     "@shelex/cypress-allure-plugin": "^2.40.0",
     "allure-commandline": "^2.24.0",
-    "cypress": "^10.11.0",
+    "cypress": "^13.3.3",
+    "cypress-failed-log": "^2.10.0",
     "esbuild": "^0.15.11",
     "eslint": "^8.49.0",
     "eslint-config-google": "^0.14.0",
